2005-10-06  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/24238
	* g++.dg/tree-ssa/pr24238.C: New testcase.

2005-10-07  Erik Edelmann  <erik.edelmann@iki.fi>

	PR 18568
	* gfortran.dg/der_pointer_3.f90: New test.

2005-10-05  Devang Patel  <dpatel@apple.com>

	PR Debug/23205
	* g++.dg/other/PR23205.C: New.
	
2005-10-05  Richard Henderson  <rth@redhat.com>

	PR target/23602
	* g++.dg/eh/omit-frame-pointer.C: Remove i?86 specific options.
	* g++.dg/eh/omit-frame-pointer2.C: Likewise.

2005-10-05  Dale Johannesen  <dalej@apple.com>

	* gcc.c-torture/execute/float-floor.c:  New.

2005-10-05  Paolo Bonzini  <bonzini@gnu.org>

	PR tree-optimization/21419
	PR tree-optimization/24146
	PR tree-optimization/24151

	* g++.dg/ext/asm7.C: New.
	* g++.dg/ext/asm8.C: New.
	* gcc.dg/asm-1.c: Compile on all targets.
	* gcc.dg/asm-pr24146.c: New.
	* gcc.dg/pr21419.c: Adjust error messages.

2005-10-05  Richard Guenther  <rguenther@suse.de>

	PR fortran/24176
	* gfortran.fortran-torture/compile/empty.f90: New testcase.

2005-10-05  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/23513
	* g++.dg/template/spec22.C: Robustify test.
	* g++.dg/template/spec26.C: New.

2005-10-05  Uros Bizjak  <uros@kss-loka.si>

	* gcc.dg/vect/vect-shift-1.c: Include tree-vect.h header. Check
	if target supports vector instructions.

2005-10-04  Geoffrey Keating  <geoffk@apple.com>

	* gcc.dg/builtins-config.h: Only PowerPC Mac OS shipped without
	C99 functions.

2005-10-04  Janis Johnson  <janis187@us.ibm.com>

	* lib/target-supports.exp (check_effective_target_fortran_large_real,
	check_effective_target_fortran_large_int): Replace cached result
	when target changes.

2005-10-04  Devang Patel  <dpatel@apple.com>

	* gcc.dg/i386-sse-vect-types.c: New.
	
2005-10-04  Ian Lance Taylor  <ian@airs.com>

	PR preprocessor/13726
	* gcc.dg/cpp/cmdlne-dI-C.c: New test.
	* gcc.dg/cpp/cmdlne-dI-C.h: New file.

2005-10-04  Richard Guenther  <rguenther@suse.de>

	PR c/23576